[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/Escena1.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/Escena2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Escena1" parent="." instance=ExtResource( 1 )]

[node name="Escena2" parent="." instance=ExtResource( 2 )]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.45098, 0.54902, 0.705882, 1 )

[node name="Escena1_btn" type="Button" parent="."]
margin_left = 338.0
margin_top = 302.0
margin_right = 447.0
margin_bottom = 331.0
text = "Escena 1"

[node name="Escena2_btn" type="Button" parent="."]
margin_left = 593.0
margin_top = 302.0
margin_right = 702.0
margin_bottom = 331.0
text = "Escena 2"

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 128.0
text = "Test Cambio de Escenas"
align = 1
valign = 1

[node name="Exit_btn" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -109.0
margin_top = -29.0
text = "Salir"

[connection signal="pressed" from="Escena1_btn" to="." method="_on_Escena1_btn_pressed"]
[connection signal="pressed" from="Escena2_btn" to="." method="_on_Escena2_btn_pressed"]
[connection signal="pressed" from="Exit_btn" to="." method="_on_Exit_btn_pressed"]
